<resources>
    <string name="app_name">MiAXC</string>
    <string name="app_version">1.6.6</string>
    <string name="toolbar_title">Materia prima</string>
    <string name="action_settings">Settings</string>
    <string name="txtEmpresa">AUTOMATICA TECHNOLOGIES</string>
    <string name="txtUsuario"> Usuario:</string>
    <string name="txt_Cambiar_Usuario"><u>Cambiar de usuario</u></string>
    <string name="txtContraseña">Contraseña:</string>
    <string name="TitIngresarDatos">Estamos casi listos para iniciar.</string>
    <string name="DescIngresarDatos">Registra la información proporcionada por el personal de AUTOMATICA TECHNOLOGIES.</string>
    <string name="CodigoDeEmpresa">Código de empresa</string>
    <string name="Estacion">Estación</string>
    <string name="DireccionIPServ">Dirección IP del servidor</string>
    <string name="txt_titulo_menu_princial">Menu principal</string>
    <string name="txt_titulo_registro_llegada">registro de mercancia nueva</string>
    <string name="contraseña_preferencias">117419</string>
    <string name="txt_pref_numero_handheld">Numero de handheld</string>
    <string name="txt_pref_licencia">Licencia de AXC</string>
    <string name="debugmode">DebugMode</string>
    <string name="txt_pref_web_service">Web service</string>
    <string name="txt_pref_titulo">Opciones de AXC</string>
    <string name="txt_usuario">Usuario (no modificar)</string>
    <string name="txt_apertura">Apertura(no modificar)</string>
    <string name="frgmnt_titulo_qr">Detección de código.</string>
    <string name="frgmnt_detalle_qr">Enfoque el código para escanear.</string>
    <string name="title_activity_prueba_soap">prueba_soap</string>
    <string name="title_activity_listview">listview</string>
    <string name="advertencia">Advertencia</string>
    <string name="escanear_Pallet">Capturar pallet</string>
    <string name="volver_escanear_Pallet">Verificar pallet</string>
    <string name="escanear_empaque">Capturar Empaque</string>
    <string name="volver_escanear_empaque">Verificar Empaque</string>
    <string name="escanear_posicion">Capturar posición</string>
    <string name="volver_escanear_posicion">Verificar posición</string>
    <string name="escanear_linea">Capturar línea</string>
    <string name="volver_escanear_linea">Verificar línea</string>
    <string name="escanear_ubicacion">Capturar ubicación</string>
    <string name="volver_escanear_ubicacion">Verificar ubicación</string>
    <string name="escanear_maquina">Ingrese máquina</string>
    <string name="capturar_cantidad_empaque">Capturar Empaques</string>
    <string name="capturar_cantidad_pieza">Capt. piezas por Empaque</string>
    <string name="capturar_cantidad_pallet">Capturar pallets</string>
    <string name="capturar_cantidad_por_empaque">Capt. Empaques por pallet</string>
    <string name="capturar_busqueda">Capturar busqueda</string>
    <string name="capturar_referencia">Capturar Empaques</string>
    <string name="unidades"></string>
    <string name="traspaso_unidades">Peso</string>
    <string name="ingresar_factura">Ingresar una factura.</string>
    <string name="volver_ingresar_factura">Volver a ingresar factura.</string>
    <string name="capturar_producto">Capturar producto</string>
    <string name="capturar_num_parte">Capturar n. de parte</string>
    <string name="capturar_orden_salida">Capturar orden de salida</string>
    <string name="ingresar_dato">Ingresar dato</string>
    <string name="capturar_orden_produccion">Capturar orden de producción</string>
    <string name="capturar_lote_producto">Capturar lote</string>
    <string name="capturar_revision">Capturar revisión</string>
    <string name="estatico_pallet"></string>
    <string name="estatico_lote"></string>
    <string name="estatico_empaque"></string>
    <string name="estatico_cantidad"></string>
    <string name="estatico_estatus"></string>
    <string name="estatico_contenido"></string>
    <string name="estatico_producto"></string>
    <string name="estatico_referencia"></string>
    <string name="estatico_orden_compra">Orden de compra</string>
    <string name="estatico_orden_produccion">Orden de producción</string>
    <string name="estatico_pedido">Orden de pedido</string>
    <string name="capturar_orden_surtido">Capturar orden de surtido</string>
    <string name="verificar_orden_surtido">Verificar la orden de surtido</string>
    <string name="pedido_docificacion">Dosificado pedidos</string>
    <string name="ajuste_docificacion">Ajuste dosificado</string>
    <string name="reimpresion_etiqueta">Reimpresión de etiqueta</string>
    <string name="capturar_orden_compra">Capturar orden de compra</string>
    <string name="seleccionar_orden_compra">Orden</string>
    <string name="registrar_sobrante">Registrar sobrante</string>
    <string name="menu_principal">Menú principal</string>
    <string name="menu_almacen"> Almacén</string>
    <string name="menu_consultas"> Consultas</string>
    <string name="menu_embarques"> Surtido</string>
    <string name="menu_inventarios"> Inventarios</string>
    <string name="menu_recepcion"> Recepción</string>
    <string name="Colocar">Colocar</string>
    <string name="Reubicar">Reubicar</string>
    <string name="Ajustes">Ajustes</string>
    <string name="Ajustes_nuevo_pallet">Nuevo pallet</string>
    <string name="Ajustes_nuevo_empaque">Nuevo Empaque</string>
    <string name="Ajustes_Baja_Empaque">Baja Empaque</string>
    <string name="Ajustes_Baja_Pallet">Baja pallet</string>
    <string name="devolucion_proveedor">Devolución a proveedor</string>
    <string name="devolucion_linea">Devolución línea</string>
    <string name="capturar_caducidad">Capturar caducidad</string>
    <string name="devolucion_proveedor_pallet">Devolución pallet</string>
    <string name="devolucion_proveedor_empaque">empaque</string>
    <string name="devolucion_proveedor_Empaque">Empaque/Piezas</string>
    <string name="registro_pallets_produccion">Registro de pallets</string>
    <string name="registro_pallets_produccion_sobrante">Registro de sobrante</string>
    <string name="almacen_armado_tarimas">Registro subensamble</string>
    <string name="devolucion_empaque">Devolución de Empaques</string>
    <string name="devolucion_pallets">Devolución de pallets</string>
    <string name="devolucion_seleccion_documento">Selección de documento</string>
    <string name="devolucion">Devolución</string>
    <string name="dev_proveedor">a proveedor</string>
    <string name="cuarentena_pallet">Pallet</string>
    <string name="cuarentena_empaque">Empaque</string>
    <string name="cuarentena_recuperar">Recuperar</string>
    <string name="cuarentena_baja">Baja</string>
    <string name="recepcion_bascula">Báscula</string>
    <string name="recepcion_surtido_entrega">Entrega</string>
    <string name="recepcion_surtido_validacion">Validación</string>
    <string name="recepcion_OC">Recepción OC</string>
    <string name="recepcion_transferenia">Traspaso</string>
    <string name="recepcion_envio_maquila">Envío de maquila</string>
    <string name="Consolidacion">Consolidación</string>
    <string name="Transferencia">Traspaso</string>
    <string name="almacen_traspaso">Traspaso</string>
    <string name="almacen_traspaso_envio">Envío traspaso</string>
    <string name="Registro_Pallets_Produccion">Registro producción</string>
    <string name="pregunta_cancelar_pallet">"¿Cancelar pallet?"</string>
    <string name="pregunta_cierre_orden_produccion">No registro un sobrante, ¿desea hacerlo?</string>
    <string name="pregunta_cierre_orden">"¿Cerrar orden?"</string>
    <string name="pregunta_cierre_pallet">"¿Cerrar tarima?"</string>
    <string name="Transferencia_Envio">Envío</string>
    <string name="Transferencia_Envio_Pallet">Envío pallet</string>
    <string name="Transferencia_Envio_Empaque">Envío Empaque</string>
    <string name="Transferencia_Envio_Unidad">Envío unidad</string>
    <string name="Transferencia_Recibo">Recibo</string>
    <string name="Transferencia_Recibo_Pallet">Recibo pallet</string>
    <string name="Transferencia_Recibo_Empaque">Recibo Empaque</string>
    <string name="Cuarentena">Cuarentena</string>
    <string name="miaxc_ingrese_consulta">Ingrese código a consultar</string>
    <string name="miaxc_consulta_placeholder">Haz una consulta</string>
    <string name="miaxc_consulta_doc_op">Órdenes de producción</string>
    <string name="miaxc_consulta_doc_OC">Órdenes de compra</string>
    <string name="miaxc_consulta_doc_TRAS">Órdenes de traspaso</string>
    <string name="miaxc_consulta_pallet">Pallet</string>
    <string name="miaxc_consulta_empaque">Empaque</string>
    <string name="miaxc_consulta_ubicacion">Ubicación</string>
    <string name="miaxc_consulta_psc">Pallets sin colocar</string>
    <string name="miaxc_consulta_existencias">Existencias</string>
    <string name="miaxc_consulta_incidencias">Incidencias</string>
    <string name="miaxc_menu_inicio">Inicio</string>
    <string name="miaxc_menu_consultas">Consultas</string>
    <string name="miaxc_OC_1DIA">Mostrar información de un día.</string>
    <string name="miaxc_OC_7DIA">Mostrar información de siete días.</string>
    <string name="miaxc_OC_30DIA">Mostrar información de treinta días.</string>
    <string name="miaxc_OC_1DIA_det">De hoy, a un día atras.</string>
    <string name="miaxc_OC_7DIA_det">De hoy, a siete días atras.</string>
    <string name="miaxc_OC_30DIA_det">De hoy, a treinta días atras.</string>
    <string name="Consultas_Posicion">Posición</string>
    <string name="Consultas_Pallet">Pallet</string>
    <string name="Consultas_Empaque">Empaque</string>
    <string name="Consultas_Referencia">Referencia</string>
    <string name="Consultas_Existencias">Existencias</string>
    <string name="Consulta_Existencias">Consulta de existencias</string>
    <string name="Embarques_Precarga">Precarga</string>
    <string name="Embarques_Precarga_Pallet">Precarga pallet</string>
    <string name="Embarques_Surtido">Surtido</string>
    <string name="Embarques_Surtido_pedido">Surtido pedido</string>
    <string name="Embarques_Surtido_valida">Validación</string>
    <string name="Embarques_Surtido_docificacion">Dosificado producción</string>
    <string name="Embarques_Surtido_Entrega">Entrega surtido</string>
    <string name="Embarques_Surtido_tipo_surtido">Tipo de surtido</string>
    <string name="Embarques_Surtido_Orden_Surtido">Orden de surtido</string>
    <string name="Embarques_Surtido_unidad">Surtido unidad</string>
    <string name="Embarques_Surtido_empaque">Surtido Empaque</string>
    <string name="Embarques_Surtido_pallet">Surtido pallet</string>
    <string name="Embarques_Surtido_partida">Surtido partida</string>
    <string name="Embarques_Valida">Validación</string>
    <string name="Embarques_Embarque">Embarque</string>
    <string name="Inventarios_CiclicoPorProducto">Cíclico por producto</string>
    <string name="Inventarios_CiclicoPorLote">Cíclico por posición</string>
    <string name="Inventarios_FisicoTotal">Físico total</string>
    <string name="Inventarios_ConfirmaPallet">Confirmar Pallet</string>
    <string name="Inventarios_ConfirmaEmpaque">Confirmar Empaque</string>
    <string name="Inventarios_PalletNuevo">Pallet Nuevo</string>
    <string name="recepcion_recepcion_oc">Recepción OC</string>
    <string name="recepcion_recepcion_por_empaque_proveedor">Proveedor</string>
    <string name="recepcion_recepcion_por_empaque_maquila">Maquila</string>
    <string name="recepcion_recepcion_por_empaque_traspasos">Traspasos</string>
    <string name="recepcion_primera_y_ultima">Primera y última</string>
    <string name="recepcion_por_empaque">Empaque</string>
    <string name="recepcion_tipo_recepcion">Tipo de recepción</string>
    <string name="pref_header_general">General</string>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_header_notifications">Notifications</string>
</resources>