<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:sample="http://schemas.android.com/apk/res-auto"
    >


    <!--<PreferenceCategory android:title="Seleccione el orden con el que se mostraran los modulos.">-->

        <!--<ListPreference-->
            <!--android:key="preferencias_orden_1"-->
            <!--android:title="Primero"-->
            <!--android:summary="%s"-->
            <!--android:entries="@array/preferencias_orden_titulos"-->
            <!--android:entryValues="@array/preferencias_orden_values">-->
        <!--</ListPreference>-->
        <!--<ListPreference-->
            <!--android:key="preferencias_orden_2"-->
            <!--android:title="Segundo"-->
            <!--android:summary="%s"-->
            <!--android:entries="@array/preferencias_orden_titulos"-->
            <!--android:entryValues="@array/preferencias_orden_values">-->
        <!--</ListPreference>-->
        <!--<ListPreference-->
            <!--android:key="preferencias_orden_3"-->
            <!--android:title="Tercero"-->
            <!--android:summary="%s"-->
            <!--android:entries="@array/preferencias_orden_titulos"-->
            <!--android:entryValues="@array/preferencias_orden_values">-->
        <!--</ListPreference>-->

    <!--</PreferenceCategory>-->




    <!--<PreferenceCategory android:title="Seleccione la cantidad de días atras que se buscara."-->
        <!--android:summary="Seleccione la cantidad de días atras que se buscara.">-->

            <!--<com.pavelsikun.seekbarpreference.SeekBarPreference-->
                <!--android:key="DiasAtrasOrdenProd"-->
                <!--android:title="Ordenes de surtido"-->
                <!--android:enabled="true"-->
                <!--android:defaultValue="15"-->
                <!--sample:msbp_minValue="1"-->
                <!--sample:msbp_maxValue="30"-->
                <!--sample:msbp_interval="1"-->
                <!--sample:msbp_measurementUnit="Días"-->
                <!--sample:msbp_dialogEnabled="false" />-->
        <!--<com.pavelsikun.seekbarpreference.SeekBarPreference-->
            <!--android:key="DiasAtrasOrdenSurt"-->
            <!--android:title="Orden de Producción"-->
            <!--android:enabled="true"-->
            <!--android:defaultValue="15"-->
            <!--sample:msbp_minValue="1"-->
            <!--sample:msbp_maxValue="30"-->
            <!--sample:msbp_interval="1"-->
            <!--sample:msbp_measurementUnit="Días"-->
            <!--sample:msbp_dialogEnabled="false" />-->

        <!--<com.pavelsikun.seekbarpreference.SeekBarPreference-->
            <!--android:key="DiasAtrasOrdenEmb"-->
            <!--android:title="Orden de Embarque"-->
            <!--android:enabled="true"-->
            <!--android:defaultValue="15"-->
            <!--sample:msbp_minValue="1"-->
            <!--sample:msbp_maxValue="30"-->
            <!--sample:msbp_interval="1"-->
            <!--sample:msbp_measurementUnit="Días"-->
            <!--sample:msbp_dialogEnabled="false" />-->

    <!--</PreferenceCategory>-->


    <PreferenceCategory android:title="Ordenes de comprar">
        <SwitchPreference
            android:key="OC_1DIA"
            android:summary="@string/miaxc_OC_1DIA_det"
            android:title="@string/miaxc_OC_1DIA" />
        <SwitchPreference
            android:key="OC_7DIA"
            android:summary="@string/miaxc_OC_7DIA_det"
            android:title="@string/miaxc_OC_7DIA" />
        <!--<SwitchPreference-->
        <!--android:key="OC_30DIA"-->
        <!--android:title="@string/miaxc_OC_30DIA"-->
        <!--android:summary="@string/miaxc_OC_30DIA_det"-->
        <!--/>-->
    </PreferenceCategory>
    <PreferenceCategory android:title="Ordenes de producción">
        <SwitchPreference
            android:key="OP_1DIA"
            android:title="@string/miaxc_OC_1DIA"
            android:summary="@string/miaxc_OC_1DIA_det"
            />
        <SwitchPreference
            android:key="OP_7DIA"
            android:title="@string/miaxc_OC_7DIA"
            android:summary="@string/miaxc_OC_7DIA_det"
            />
        <!--<SwitchPreference-->
            <!--android:key="OP_30DIA"-->
            <!--android:title="@string/miaxc_OC_30DIA"-->
            <!--android:summary="@string/miaxc_OC_30DIA_det"-->
            <!--/>-->
    </PreferenceCategory>



    <PreferenceCategory android:title="Ordenes de Traspaso">
        <SwitchPreference
            android:key="TRAS_1DIA"
            android:title="@string/miaxc_OC_1DIA"
            android:summary="@string/miaxc_OC_1DIA_det"
            />
        <SwitchPreference
            android:key="TRAS_7DIA"
            android:title="@string/miaxc_OC_7DIA"
            android:summary="@string/miaxc_OC_7DIA_det"
            />
        <!--<SwitchPreference-->
            <!--android:key="TRAS_30DIA"-->
            <!--android:title="@string/miaxc_OC_30DIA"-->
            <!--android:summary="@string/miaxc_OC_30DIA_det"-->
            <!--/>-->
    </PreferenceCategory>





</PreferenceScreen>