<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_Login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_no_icon"
    android:orientation="vertical"
    tools:context=".Principal.Login">


    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />


    <Button
        android:id="@+id/btn_Cambiarusuario"
        style="@style/Estilo_Boton_MiAXC"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="113dp"
        android:layout_marginRight="113dp"
        android:elevation="0dp"
        android:text="@string/txt_Cambiar_Usuario"
        android:textSize="15dp"
        app:layout_constraintEnd_toStartOf="@+id/btnIngresar"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til2" />

    <Button

        android:id="@+id/btnIngresar"
        style="@style/Estilo_Boton_MiAXC"
        android:layout_width="67dp"
        android:layout_height="41dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="56dp"
        android:layout_marginRight="56dp"
        android:elevation="0dp"
        android:text="Ingresar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til2" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtv_Bienvenida">

        <EditText
            android:id="@+id/Usuario"

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            android:ems="10"
            android:hint="@string/txtUsuario"
            android:inputType="textVisiblePassword"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.51"
            app:layout_constraintStart_toStartOf="parent" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til">

        <EditText
            android:id="@+id/Contraeña"

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            android:ems="10"
            android:hint="@string/txtContraseña"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.51"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Usuario" />


    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/imgv_AXC"
        android:layout_width="0dp"
        android:layout_height="112dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:srcCompat="@mipmap/miaxc_logo_nuevo_grande" />


    <TextView
        android:id="@+id/txtv_Bienvenida"
        style="@style/EstiloTexto_Negro_Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="Bienvenido, ingrese sus credenciales."
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        style="@style/EstiloTexto_Negro_Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/txtEmpresa"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgv_AXC" />

    <FrameLayout
        android:id="@+id/progressBarHolder"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0.4"
        android:animateLayoutChanges="true"
        android:background="#000000"
        android:clickable="true"
        android:elevation="10dp"
        android:focusable="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:elevation="10dp"
            android:indeterminate="true" />
    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>